@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gnomeradio
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.2 2002/07/25 23:20:26 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.3 2002/10/23 16:56:04 foser Exp $
+
+*gnomeradio-1.3 (23 Oct 2002)
+
+  23 Oct 2002; foser <foser@gentoo.org> :
+  New version, fixed deps. Thanks to Markus Bertheau <twanger@bluetwanger.de>
 
 *gnomeradio-1.2.1 (26 Jul 2002)
   26 Jul 2002; Spider <spider@gentoo.org> gnomeradio-1.2.1.ebuild:
